export const snapshot = {};

snapshot[`includes errors-responses 1`] = `
'import { makeApi, Zodios, type ZodiosOptions } from "@zodios/core";
import { z } from "zod";

const endpoints = makeApi([
  {
    method: "get",
    path: "/example",
    requestFormat: "json",
    response: z.object({ str: z.string(), nb: z.number() }).passthrough(),
    errors: [
      {
        status: 400,
        description: \`Bad request\`,
        schema: z.object({ is400: z.boolean() }).partial().passthrough(),
      },
      {
        status: 500,
        description: \`Internal server error\`,
        schema: z.string(),
      },
    ],
  },
]);

export const api = new Zodios(endpoints);

export function createApiClient(baseUrl: string, options?: ZodiosOptions) {
  return new Zodios(baseUrl, endpoints, options);
}
'
`;

snapshot[`determines which status are considered errors-responses 1`] = `
'import { makeApi, Zodios, type ZodiosOptions } from "@zodios/core";
import { z } from "zod";

const VeryDeeplyNested = z.enum(["aaa", "bbb", "ccc"]);
const DeeplyNested = z.array(VeryDeeplyNested);
const Main = z.object({ str: z.string(), nb: z.number() }).passthrough();
const Nested = z
  .object({
    nested_prop: z.boolean().optional(),
    deeplyNested: DeeplyNested.optional(),
    circularToMain: Main.optional(),
    requiredProp: z.string(),
  })
  .passthrough();

export const schemas = {
  VeryDeeplyNested,
  DeeplyNested,
  Main,
  Nested,
};

const endpoints = makeApi([
  {
    method: "get",
    path: "/example",
    requestFormat: "json",
    response: z.object({ str: z.string(), nb: z.number() }).passthrough(),
    errors: [
      {
        status: 400,
        description: \`Bad request\`,
        schema: z
          .object({ is400: z.boolean(), nested: Nested })
          .partial()
          .passthrough(),
      },
      {
        status: 500,
        description: \`Internal server error\`,
        schema: z.string(),
      },
    ],
  },
]);

export const api = new Zodios(endpoints);

export function createApiClient(baseUrl: string, options?: ZodiosOptions) {
  return new Zodios(baseUrl, endpoints, options);
}
'
`;

snapshot[`determines which status are considered errors-responses 2`] = `
'import { makeApi, Zodios, type ZodiosOptions } from "@zodios/core";
import { z } from "zod";

const VeryDeeplyNested = z.enum(["aaa", "bbb", "ccc"]);
const DeeplyNested = z.array(VeryDeeplyNested);
const Main = z.object({ str: z.string(), nb: z.number() }).passthrough();
const Nested = z
  .object({
    nested_prop: z.boolean().optional(),
    deeplyNested: DeeplyNested.optional(),
    circularToMain: Main.optional(),
    requiredProp: z.string(),
  })
  .passthrough();

export const schemas = {
  VeryDeeplyNested,
  DeeplyNested,
  Main,
  Nested,
};

const endpoints = makeApi([
  {
    method: "get",
    path: "/example",
    requestFormat: "json",
    response: z.object({ str: z.string(), nb: z.number() }).passthrough(),
    errors: [
      {
        status: 400,
        description: \`Bad request\`,
        schema: z
          .object({ is400: z.boolean(), nested: Nested })
          .partial()
          .passthrough(),
      },
      {
        status: 500,
        description: \`Internal server error\`,
        schema: z.string(),
      },
    ],
  },
]);

export const api = new Zodios(endpoints);

export function createApiClient(baseUrl: string, options?: ZodiosOptions) {
  return new Zodios(baseUrl, endpoints, options);
}
'
`;
